--- a/books.html
+++ b/books.html
@@ -1,44 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
+      const bookData = {
+        Books: [
+          {
+            title: "The Great Gatsby",
+            author: "F. Scott Fitzgerald",
+            publicationYear: 1925,
+            genres: ["Fiction", "Classics"],
+          },
+          {
+            title: "To Kill a Mockingbird",
+            author: "Harper Lee",
+            publicationYear: 1960,
+            genres: ["Fiction", "Coming-of-Age"],
+          },
+        ],
+      };
 
-        const stuData = {
-                            "Students":
-                            [
-                                {
-                                    "name":"Ahmad",
-                                    "matricNo":"AI00001",
-                                    "age":22,
-                                    "address":"Kuala Lumpur",
-                                    "subjects":["Web Development","Database","Java"]
-                                },
-                                {    
-                                
-                                    "name":"Steve",
-                                    "matricNo":"AI00002",
-                                    "age":25,
-                                    "address":"California",
-                                    "subjects":["Python","Node.js","Flutter"]
+      console.log(bookData.Books[0].title);
+      console.log(bookData.Books[1].author);
 
-                                }
-                            ]
-                        };
-
-        console.log(stuData.Students[0].name);
-        console.log(stuData.Students[0].matricNo);
-
-        // Loop through the students and display the subjects
-        stuData.Students.forEach(student => {
-            console.log(student.subjects);
-        });
-
+      // Loop through the students and display the subjects
+      bookData.Books.forEach((books) => {
+        console.log(books.genres);
+      });
     </script>
-</body>
+  </body>
 </html>
